LB.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valyan-otus-ingress-grafana
  namespace: observ
  annotations:
    ingress.alb.yc.io/subnets: e9bm7j3hfnd1opck2egc #yc vpc subnets list service-cidr-reservation id
    ingress.alb.yc.io/security-groups: enp454cqf2vhdetg2nee #yc vpc security-group list  k8s-public-services  id
    ingress.alb.yc.io/external-ipv4-address: auto
    ingress.alb.yc.io/group-name: valyan-otus-ingress-group  
spec:
  tls:
    - hosts:
        - valyan-otus.ru
      secretName: yc-certmgr-cert-id-fpq340n9020crs6jtovk #yc certificate-manager certificate list id
  rules:
    - host: valyan-otus.ru
      http:
        paths:
        - pathType: Prefix
          path: /grafana
          backend:
            service:
              name: prometheus-stack-grafana
              port:
                name: http-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valyan-otus-ingress-argocd
  namespace: cicd
  annotations:
    ingress.alb.yc.io/subnets: e9bm7j3hfnd1opck2egc #yc vpc subnets list service-cidr-reservation id
    ingress.alb.yc.io/security-groups: enp454cqf2vhdetg2nee  #yc vpc security-group list  k8s-public-services  id
    ingress.alb.yc.io/external-ipv4-address: auto
    ingress.alb.yc.io/group-name: valyan-otus-ingress-group
spec:
  tls:
    - hosts:
        - valyan-otus.ru
      secretName: yc-certmgr-cert-id-fpq340n9020crs6jtovk #yc certificate-manager certificate list id
  rules:
    - host: valyan-otus.ru
      http:
        paths:
        - pathType: Prefix
          path: /argocd
          backend:
            service:
              name: argocd-server
              port:
                name: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valyan-otus-ingress-frontend
  namespace: app
  annotations:
    ingress.alb.yc.io/subnets: e9bm7j3hfnd1opck2egc #yc vpc subnets list service-cidr-reservation id
    ingress.alb.yc.io/security-groups: enp454cqf2vhdetg2nee  #yc vpc security-group list  k8s-public-services  id
    ingress.alb.yc.io/external-ipv4-address: auto
    ingress.alb.yc.io/group-name: valyan-otus-ingress-group
spec:
  tls:
    - hosts:
        - valyan-otus.ru
      secretName: yc-certmgr-cert-id-fpq340n9020crs6jtovk #yc certificate-manager certificate list id
  rules:
    - host: valyan-otus.ru
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: frontend
              port:
                name: http
